--- a/index.html
+++ b/index.html
@@ -5,6 +5,151 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css"/>
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <nav class="header__menu">
+        <ul class="header__menu-list">
+          <li class="header__menu-item header__menu-item_active">
+            <a class="header__menu-link header__menu-link_active">Главная</a>
+          </li>
+          <li class="header__menu-item">
+              <a class="header__menu-link" href="#0">Посмотреть лоты</a>
+          </li>
+          <li class="header__menu-item">
+                <a class="header__menu-link" href="#0">Об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <a class="header__logo">
+        <img
+        class="header__logo-image"
+        src="./images/logo-black.svg"
+        alt="Логотип аукциона"
+        />
+      </a>
+      <address class="address">
+        <ul class="address__list">
+          <li class="address__list-item">
+            <a href="tel:+70000000">+7(000)000-00-00</a>
+          </li>
+          <li class="address__list-item">
+            <a href="mailto:mail@example.com">mail@example.com</a>
+          </li>
+          <li class="address__list-item">
+            <a>наб. Принсенграхт 263-<br>265, Амстердам</a>
+          </li>
+        </ul>
+      </address>
+    </header>
+    <main>
+      <section class="cover">
+        <div class="overlay"></div>
+          <h1 class="cover__title">
+            <span class="accent-span">Оно</span>
+            <span class="accent-span text-center">тебе</span>
+            <span class="accent-span text-right">надо</span>
+          </h1>
+          <div class="cover__description">
+            <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
+            <button class="bet-button">Сделать ставку</button>
+          </div>
+      </section>
+      <section class="lots">
+        <h2 class="lots__heading">Лоты</h2>
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item card_type_film">
+            <div class="overlay"></div>
+            <a class="card-link card__title" href="#0">Фильм режиссёра, который бросил киношколу</a>
+            <article class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</article>
+          </li>
+          <li class="lots__card-list-item card_type_book">
+            <div class="overlay"></div>
+            <a class="card-link card__title" href="#0">Книга, где описан один скучный день из жизни рекламного агента</a>
+            <article class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</article>
+          </li>
+          <li class="lots__card-list-item card_type_picture">
+            <div class="overlay"></div>
+            <a class="card-link card__title" href="#0">Картина, которую повторит даже 5-летний сын маминой подруги</a>
+            <article class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</article>
+          </li>
+        </ul>
+        <a class="lots__look-more-link" href="#0">Посмотреть больше</a>
+      </section>
+      <section class="about">
+        <div class="about__column">
+          <div class="about__logo">
+            <img
+            class="about__logo-image"
+            src="./images/logo-white.svg"
+            />
+          </div>
+          <div class="about__auction">
+            <h2 class="about__title">Об аукционе</h2>
+            <p class="about__text">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+            <p class="about__text">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.</p>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <address>
+        <ul class="address__list">
+          <li class="address__list-item">
+            <a href="tel:+70000000">+7(000)000-00-00</a>
+          </li>
+          <li class="address__list-item">
+            <a href="mailto:mail@example.com">mail@example.com</a>
+          </li>
+          <li class="address__list-item">
+            <a>наб. Принсенграхт 263-<br>265, Амстердам</a>
+          </li>
+        </ul>
+      </address>
+      <nav class="footer__menu">
+      <ul class="footer__menu-list">
+        <li class="footer__menu-list-item">
+          <a class="footer__menu-link footer__menu-link_active" href="#0">Главная</a>
+        </li>
+        <li class="footer__menu-list-item">
+          <a class="footer__menu-link" href="#0">Посмотреть лоты</a>
+        </li>
+        <li class="footer__menu-list-item">
+          <a class="footer__menu-link" href="#0">Об аукционе</a>
+        </li>
+      </ul>
+    </nav>
+      <div class="footer__social">
+        <ul class="footer__social-list">
+          <li class="footer__social-list-item">
+            <a class="footer__social-link">
+              <img
+              class="footer__social-icon"
+              src="./images/yt.svg"
+              />
+            </a>
+          </li>
+          <li class="footer__social-list-item">
+            <a class="footer__social-link">
+              <img
+              class="footer__social-icon"
+              src="./images/vk.svg"
+              />
+           </a>
+          </li>
+          <li class="footer__social-list-item">
+            <a class="footer__social-link">
+              <img
+              class="footer__social-icon"
+              src="./images/pinterest.svg"
+              />
+            </a>
+          </li>
+        </ul>
+      </div>
+    </footer>
+  </body>
 </html>
