--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
             <img
             class="about__logo-image"
             src="./images/logo-white.svg"
+            alt="Логотип аукциона"
             />
           </div>
           <div class="about__auction">
@@ -129,6 +130,7 @@
               <img
               class="footer__social-icon"
               src="./images/yt.svg"
+              alt="Логотип ютуба"
               />
             </a>
           </li>
@@ -137,6 +139,7 @@
               <img
               class="footer__social-icon"
               src="./images/vk.svg"
+              alt="Логотип ВКонтакте"
               />
            </a>
           </li>
@@ -145,6 +148,7 @@
               <img
               class="footer__social-icon"
               src="./images/pinterest.svg"
+              alt="Логотип пинтереста"
               />
             </a>
           </li>
