fixed one more time

--- a/index.html
+++ b/index.html
@@ -32,17 +32,9 @@
         />
       </a>
       <address class="address">
-        <ul class="address__list">
-          <li class="address__list-item">
             <a href="tel:+70000000">+7(000)000-00-00</a>
-          </li>
-          <li class="address__list-item">
             <a href="mailto:mail@example.com">mail@example.com</a>
-          </li>
-          <li class="address__list-item">
-            <a>наб. Принсенграхт 263-<br />265, Амстердам</a>
-          </li>
-        </ul>
+            <p>наб. Принсенграхт 263-265, Амстердам</p>
       </address>
     </header>
     <main>
@@ -63,40 +55,32 @@
       <section class="lots">
         <h2 class="lots__heading">Лоты</h2>
         <ul class="lots__card-list">
-          <li class="lots__card-list-item card_type_film">
-            <div class="overlay"></div>
-            <a class="card-link card__title" href="#0"
-              >Фильм режиссёра, который бросил киношколу</a
-            >
-            <article class="card__text">
-              Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
-              ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
-            </article>
+          <li class="lots__card-list-item">
+            <a class="card-link" href="#0">
+              <article class="card card_type_film">
+                <div class="overlay"></div>
+                <h3 class="card__title">Фильм режиссёра, который бросил киношколу<h3>
+                <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+              </article>
+            </a>
           </li>
-          <li class="lots__card-list-item card_type_book">
-            <div class="overlay"></div>
-            <a class="card-link card__title" href="#0"
-              >Книга, где описан один скучный день из жизни рекламного агента</a
-            >
-            <article class="card__text">
-              Объёмом почти в тысячу страниц. Иногда без знаков препинания и с
-              переходами на древнеанглийский. В ней одновременно рассказывается
-              о 16 июня 1904 года и об истории литературы, начиная с античных
-              времён. И это всё накладывается на эпическую поэму Гомера. Сколько
-              бы вы поставили на «Улисса» Джеймса Джойса?
-            </article>
+          <li class="lots__card-list-item">
+            <a class="card-link" href="#0">
+              <article class="card card_type_book">
+                <div class="overlay"></div>
+                <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента<h3>
+                <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+              </article>
+            </a>
           </li>
-          <li class="lots__card-list-item card_type_picture">
-            <div class="overlay"></div>
-            <a class="card-link card__title" href="#0"
-              >Картина, которую повторит даже 5-летний сын маминой подруги</a
-            >
-            <article class="card__text">
-              Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то
-              похожее на инфузорию-туфельку. Никаких полей, лесов, котиков...
-              Сколько бы вы на такое поставили, если бы не знали, что это — одна
-              из революционных работ Кандинского?
-            </article>
+          <li class="lots__card-list-item">
+            <a class="card-link" href="#0">
+              <article class="card card_type_picture">
+                <div class="overlay"></div>
+                <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги<h3>
+                <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+              </article>
+            </a>
           </li>
         </ul>
         <a class="lots__look-more-link" href="#0">Посмотреть больше</a>
@@ -133,18 +117,10 @@
       </section>
     </main>
     <footer class="footer">
-      <address>
-        <ul class="address__list">
-          <li class="address__list-item">
-            <a href="tel:+70000000">+7(000)000-00-00</a>
-          </li>
-          <li class="address__list-item">
+      <address class="address">
+            <a href="tel:+70000000">+7(000)000-00-00</a><br/>
             <a href="mailto:mail@example.com">mail@example.com</a>
-          </li>
-          <li class="address__list-item">
-            <a>наб. Принсенграхт 263-<br />265, Амстердам</a>
-          </li>
-        </ul>
+            <p>наб. Принсенграхт 263-<br />265, Амстердам</p>
       </address>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
@@ -161,7 +137,6 @@
           </li>
         </ul>
       </nav>
-      <div class="footer__social">
         <ul class="footer__social-list">
           <li class="footer__social-list-item">
             <a class="footer__social-link">
@@ -191,7 +166,6 @@
             </a>
           </li>
         </ul>
-      </div>
     </footer>
   </body>
 </html>
